--- a/src/app/Ilana/task-list/task-list.component.html
+++ b/src/app/Ilana/task-list/task-list.component.html
@@ -18,7 +18,47 @@
     <!-- Status Column -->
     <ng-container matColumnDef="Status">
       <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-select [(ngModel)]="element.Status" (selectionChange)="updateTask(element)">
+          <mat-option *ngFor="let status of statusOptions" [value]="status">{{ status }}</mat-option>
+        </mat-select>
+      </td>
+    </ng-container>
+
+    <!-- Checklist Item 1 Column -->
+    <ng-container matColumnDef="Checklist1">
+      <th mat-header-cell *matHeaderCellDef> Checklist 1 </th>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-checkbox [(ngModel)]="element.ChecklistItem1" (change)="updateTask(element)"></mat-checkbox>
+        <span>{{element.ChecklistItem1Counter}}</span>
+      </td>
+    </ng-container>
+
+    <!-- Checklist Item 2 Column -->
+    <ng-container matColumnDef="Checklist2">
+      <th mat-header-cell *matHeaderCellDef> Checklist 2 </th>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-checkbox [(ngModel)]="element.ChecklistItem2" (change)="updateTask(element)"></mat-checkbox>
+        <span>{{element.ChecklistItem2Counter}}</span>
+      </td>
+    </ng-container>
+
+    <!-- Checklist Item 3 Column -->
+    <ng-container matColumnDef="Checklist3">
+      <th mat-header-cell *matHeaderCellDef> Checklist 3 </th>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-checkbox [(ngModel)]="element.ChecklistItem3" (change)="updateTask(element)"></mat-checkbox>
+        <span>{{element.ChecklistItem3Counter}}</span>
+      </td>
+    </ng-container>
+
+    <!-- Checklist Item 4 Column -->
+    <ng-container matColumnDef="Checklist4">
+      <th mat-header-cell *matHeaderCellDef> Checklist 4 </th>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-checkbox [(ngModel)]="element.ChecklistItem4" (change)="updateTask(element)"></mat-checkbox>
+        <span>{{element.ChecklistItem4Counter}}</span>
+      </td>
     </ng-container>
 
     <!-- Start Date Column -->
@@ -27,30 +67,10 @@
       <td mat-cell *matCellDef="let element"> {{element.StartDate | date}} </td>
     </ng-container>
 
-    <!-- End Date Column -->
-    <ng-container matColumnDef="EndDate">
-      <th mat-header-cell *matHeaderCellDef> End Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.EndDate | date}} </td>
-    </ng-container>
-
-    <!-- Due Date Column -->
-    <ng-container matColumnDef="DueDate">
-      <th mat-header-cell *matHeaderCellDef> Due Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.DueDate | date}} </td>
-    </ng-container>
-
     <!-- Is Recurring Column -->
     <ng-container matColumnDef="IsRecurring">
       <th mat-header-cell *matHeaderCellDef> Recurring </th>
       <td mat-cell *matCellDef="let element"> {{element.IsRecurring ? 'Yes' : 'No'}} </td>
-    </ng-container>
-
-    <!-- Progress Column -->
-    <ng-container matColumnDef="Progress">
-      <th mat-header-cell *matHeaderCellDef> Progress </th>
-      <td mat-cell *matCellDef="let element">
-        <mat-progress-bar mode="determinate" [value]="element.progress" [class]="element.progressColor"></mat-progress-bar>
-      </td>
     </ng-container>
 
     <!-- Created By Column -->
