--- a/src/app/Ilana/edit-task/edit-task.component.html
+++ b/src/app/Ilana/edit-task/edit-task.component.html
@@ -3,29 +3,21 @@
   <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
     <div class="form-row">
       <div class="form-column">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="full-width">
           <mat-label>Task Name</mat-label>
           <input matInput formControlName="taskName">
         </mat-form-field>
       </div>
       <div class="form-column">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="full-width">
           <mat-label>Task Description</mat-label>
           <input matInput formControlName="taskDescription">
-        </mat-form-field>
-      </div>
-      <div class="form-column">
-        <mat-form-field appearance="fill">
-          <mat-label>Status</mat-label>
-          <mat-select formControlName="status">
-            <mat-option *ngFor="let status of statusOptions" [value]="status">{{ status }}</mat-option>
-          </mat-select>
         </mat-form-field>
       </div>
     </div>
     <div class="form-row">
       <div class="form-column">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="full-width">
           <mat-label>Start Date</mat-label>
           <input matInput [matDatepicker]="picker1" formControlName="startDate">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
@@ -33,15 +25,7 @@
         </mat-form-field>
       </div>
       <div class="form-column">
-        <mat-form-field appearance="fill">
-          <mat-label>Created By</mat-label>
-          <input matInput formControlName="createdBy">
-        </mat-form-field>
-      </div>
-    </div>
-    <div class="form-row">
-      <div class="form-column">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="full-width">
           <mat-label>Assign Users</mat-label>
           <mat-select formControlName="assignedUsers" multiple>
             <mat-option *ngFor="let user of users" [value]="user.EmployeeID">
@@ -50,27 +34,10 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="form-column">
-        <mat-checkbox formControlName="isRecurring">Is Recurring</mat-checkbox>
-      </div>
-    </div>
-    <div class="form-row">
-      <div class="form-column">
-        <mat-checkbox formControlName="checklistItem1">Checklist Item 1</mat-checkbox>
-      </div>
-      <div class="form-column">
-        <mat-checkbox formControlName="checklistItem2">Checklist Item 2</mat-checkbox>
-      </div>
-      <div class="form-column">
-        <mat-checkbox formControlName="checklistItem3">Checklist Item 3</mat-checkbox>
-      </div>
-      <div class="form-column">
-        <mat-checkbox formControlName="checklistItem4">Checklist Item 4</mat-checkbox>
-      </div>
     </div>
     <div class="form-actions">
-      <button mat-raised-button color="primary" type="submit">Update Task</button>
       <button mat-button type="button" (click)="dialogRef.close()">Cancel</button>
+      <button mat-raised-button color="primary" type="submit">Update Task</button>
     </div>
   </form>
 </div>
