--- a/src/app/Ilana/edit-task/edit-task.component.scss
+++ b/src/app/Ilana/edit-task/edit-task.component.scss
@@ -1,23 +1,30 @@
 .container {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
   }
   
   .form-row {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 1em;
   }
   
   .form-column {
-    flex: 1 1 calc(33% - 10px);
-    margin: 5px;
-    min-width: 200px;
+    flex: 1;
+    margin: 0 0.5em;
+  }
+  
+  .full-width {
+    width: 100%;
   }
   
   .form-actions {
     display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
-    gap: 10px;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 1em;
   }
   
