--- a/src/app/Ilana/task-list/task-list.component.html
+++ b/src/app/Ilana/task-list/task-list.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">Task Manager</mat-toolbar>
-<div class="container">
-  <button mat-raised-button color="primary" (click)="openAddDialog()">Add Task</button>
+<mat-toolbar color="primary" class="center-title">עובד חדש</mat-toolbar>
+<div class="container" dir="rtl">
+  <button mat-raised-button color="primary" (click)="openAddDialog()">הוספת משימה חדשה</button>
   <table mat-table [dataSource]="tasks" class="mat-elevation-z8">
 
     <!-- Task ID Column -->
@@ -38,7 +38,7 @@
       <th mat-header-cell *matHeaderCellDef> שיחת תיאום ציפיות </th>
       <td mat-cell *matCellDef="let element">
         <div class="checklist-container">
-          <mat-checkbox [(ngModel)]="element.ChecklistItem1" (change)="onCheckboxChange(element, 'ChecklistItem1', $event.checked)"></mat-checkbox>
+          <mat-checkbox class="check-green" [(ngModel)]="element.ChecklistItem1" (change)="onCheckboxChange(element, 'ChecklistItem1', $event.checked)"></mat-checkbox>
           <span>{{ element.ChecklistItem1Counter }}</span>
         </div>
       </td>
@@ -49,7 +49,7 @@
       <th mat-header-cell *matHeaderCellDef> ⁠רשימת תיוג </th>
       <td mat-cell *matCellDef="let element">
         <div class="checklist-container">
-          <mat-checkbox [(ngModel)]="element.ChecklistItem2" (change)="onCheckboxChange(element, 'ChecklistItem2', $event.checked)"></mat-checkbox>
+          <mat-checkbox class="check-green" [(ngModel)]="element.ChecklistItem2" (change)="onCheckboxChange(element, 'ChecklistItem2', $event.checked)"></mat-checkbox>
           <span>{{ element.ChecklistItem2Counter }}</span>
         </div>
       </td>
@@ -60,7 +60,7 @@
       <th mat-header-cell *matHeaderCellDef> הרשאות לביצוע פעולות </th>
       <td mat-cell *matCellDef="let element">
         <div class="checklist-container">
-          <mat-checkbox [(ngModel)]="element.ChecklistItem3" (change)="onCheckboxChange(element, 'ChecklistItem3', $event.checked)"></mat-checkbox>
+          <mat-checkbox class="check-green" [(ngModel)]="element.ChecklistItem3" (change)="onCheckboxChange(element, 'ChecklistItem3', $event.checked)"></mat-checkbox>
           <span>{{ element.ChecklistItem3Counter }}</span>
         </div>
       </td>
@@ -71,7 +71,7 @@
       <th mat-header-cell *matHeaderCellDef> הקמת עובד במלמ ועדכון אירועים </th>
       <td mat-cell *matCellDef="let element">
         <div class="checklist-container">
-          <mat-checkbox [(ngModel)]="element.ChecklistItem4" (change)="onCheckboxChange(element, 'ChecklistItem4', $event.checked)"></mat-checkbox>
+          <mat-checkbox class="check-green" [(ngModel)]="element.ChecklistItem4" (change)="onCheckboxChange(element, 'ChecklistItem4', $event.checked)"></mat-checkbox>
           <span>{{ element.ChecklistItem4Counter }}</span>
         </div>
       </td>
@@ -81,7 +81,7 @@
     <ng-container matColumnDef="Actions">
       <th mat-header-cell *matHeaderCellDef> עריכה </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button (click)="openEditDialog(element)">Edit</button>
+        <button mat-button (click)="openEditDialog(element)"><mat-icon>edit</mat-icon> Edit</button>
       </td>
     </ng-container>
 
