--- a/src/app/chameleon-reports/skin-integrity-report/skin-integrity-report.component.html
+++ b/src/app/chameleon-reports/skin-integrity-report/skin-integrity-report.component.html
@@ -8,12 +8,12 @@
 
   <!-- Filter Form for Table -->
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
-    <!-- Global Search Input -->
+    <!-- Global Search Input
     <mat-form-field class="long-search-bar">
       <mat-label class="filters" style="color: blue">חיפוש</mat-label>
       <input matInput formControlName="globalFilter" class="search-input" />
     </mat-form-field>
-  
+   -->
     <!-- Date Pickers -->
     <mat-form-field>
       <mat-label>בחר תאריך קבלה</mat-label>
